--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@
 	padding:0;
 	box-sizing: border-box;
 }
+
+.main-content{
+	background:#eee;
+	line-height: 1;
+	font-size: 18px;
+	height: 50vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.feature-section{
+	background:#000;
+	color:#fff;
+	height: 50vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.feature-section ul li{
+	list-style: none;
+	line-height: 2;
+}
